css/styles.css
*{
    padding:0px;
    margin:0px;
    list-style: none;
	text-decoration: none;
}


/* General Settings */


html{
    scroll-behavior:smooth;
}

body{
    font-family: 'Crete Round' !important;
    background: linear-gradient(355deg, rgba(121,86,93,1) 0%, rgba(110,79,88,1) 4%, rgba(106,77,87,1) 9%, rgba(86,110,142,1) 28%, rgba(79,67,91,1) 70%, rgba(78,60,76,1) 91%);
}

p{
    color:#FFE8FF;
}

h1{
    font-size:3.5em;
    color:#fff;
    text-align: center;
    text-shadow: 2px 2px 5px black;
}

h2{
    font-size: 2.4em;
    color:#fff;
    text-align: center;
    text-shadow: 2px 2px 5px #000;
}

h3{
    font-size: 1.5em;
    color:#fff;
    text-align: center;
    text-shadow: 2px 2px 5px #000;
}


/* Header Settings */


header hgroup{
    padding-top:20em;
    font-style: italic;
}

.main-header{
    height: 100vh;
}

#home-header-background,
#lore-header-background,
#skins-header-background,
#coaching-header-background,
#thankyou-header-background
{
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

#home-header-background{
    background-image: url(../images/Sona-min.jpg);
    background-position: 56% 70%;
}

#lore-header-background{
    background-image: url(../images/SonaShow.jpg);
}

#skins-header-background{
    background-image: url(../images/SonaSkins.jpg);
    background-position:top right;
    background-position: 70% 80%;
}

#coaching-header-background{
    background-image: url(../images/SonaCoaching.jpg);
}

#thankyou-header-background{
    background-image: url(../images/SonaThankYou.jpeg);

}

.thankyou-h2-mobile{
    font-style: normal;
    text-shadow: none;
    color:#4f3f52;
    padding-top:25em;
}

.thankyou-h2-mobile h2{
    
    color:#4f3f52;
    -webkit-text-stroke: 1px #fff;
}


/* Nav Settings */


.main-nav{
    text-align: center;
    z-index: 10;
}

.main-nav ul{
    padding: 10px;
    padding-top: 25px;
}

.main-nav ul li{
    list-style-type: none;
    border: 1px solid #fff;
    border-radius: 10px;
    width: 80%;
    margin: 0 auto;
    margin-bottom: 10px;
    background-color: rgba(79,137,164,0.5);
    box-shadow: 1px 1px 5px #000;
}

.main-nav ul li a{
    color: #FFE8FF;
    font-size: 1.3em;
    padding:15px;
    display: block;
}

.main-nav ul li:hover{
    border-color: #4F3F52;
    box-shadow: 1px 1px 5px #fff;
    color:#4F3F52;
    background-color: #FFE8FF;
}

.main-nav ul li:hover a{
  color: #4F3F52;
}

/* Section Settings */


main article{
    margin: 0 auto;
    width: 80%;
}

article figure video, article figure img{
    display: block;
    margin: 15px auto;
    width: 100%;
    border:1px solid #fff;
}

article p{
    display: block;
    margin: 15px auto;
    width: 95%;
    text-align: justify;
}

article .ability-icon{
    width: 17px;
    margin-right: 5px;
}

section h2{
    margin: 0 0 15px 0;
}

.lore-aside{
    display: none;
}

.notes{
    display: none;
}


/* Gallery Settings */


#mobile-gallery article p{
    font-size: 1.5em;
    text-align: center;
    width: fit-content;
    border-bottom: 1px double #FFE8FF;
}

#mobile-gallery article{
    margin-bottom: 50px;
}

    /* Carousel CSS */

.gallery-container {
    margin-top: 100px;
    margin-bottom: 100px;
    display: none;
}

.carousel-inner img {
    width: 100%;
    height: 100%;
}

#custCarousel{
    text-align:center;
}

#custCarousel .carousel-indicators {
    position: static;
    margin-top: 10px;
}

#custCarousel .carousel-indicators> li {
    width: 100px;
}

#custCarousel .carousel-indicators li img {
    display: block;
    opacity: 0.5;
}

#custCarousel .carousel-indicators li.active img {
    opacity: 1;
}

#custCarousel .carousel-indicators li:hover img {
    opacity: 0.75;
}

.carousel-item img {
    width: 90%;
}

.carousel-nametag{
    margin-top: 15px;
    font-size: 1.5em;
    text-align: center;
    margin:0 auto;
    width: fit-content;
    border-bottom: 1px double #FFE8FF;
}


/* Coaching Settings */


form{
    width: 70%;
    margin: 40px auto;
    border-radius: 5px;
    background-color: rgba(255,255,255,0.4);
    padding: 20px;
}

form label{
    font-size: 1.5em;
    color:#FFE8FF;
}

form input[type=text], select, input[type=date],input[type=email], textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
}
 
form textarea{
    resize: vertical;
    min-height: 100px;
    max-height: 300px;
}

form input[type=submit] {
    background-color: #6586B2;
    color: #FFE8FF;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-right: 10px;
    font-size: 1.05em;
    width: 100px;
}
  
form input[type=submit]:hover{
    background-color: #FFE8FF;
    color:#4F3F52;
}

#about-intowski{
    margin-bottom: 40px;
}

.coaching-aside{
    margin:55px auto;
    vertical-align: top;
    background-color: rgba(255,255,255,0.2);
    border-radius: 10px;
    padding:20px 5px;
    width: 60%;
    text-align: left;
}

.coaching-aside p a{
    font-size: 1.1em;
}

.coaching-aside p{
    margin: 15px;
    margin-left: 30px;
}

.coaching-aside a{
    color: #fff;
}

.coaching-aside a:hover{
    text-decoration: underline;
}

.pricing{
    display: none;
}


/* Footer Settings */


footer{
    background-color: rgba(255,255,255, 0.4);
    text-align: center;
}

footer section{
    padding-top: 15px;
    padding-bottom: 15px;
    display: inline-block;
    margin: 0 15%;
}

footer p{
    padding-top: 5px;
    margin-bottom: 0 !important;
    text-align: center;
    font-size: 17px;
    color:#566E8E;
}

.copyright .socials{
    width: 50%;
}

footer img{
    width: 32px;
    height: 32px;
    padding: 0 2.5px;
}

.socials{
    padding-top: 0;
    margin-bottom: 10px;
}


/* Responsive */


@media screen and (min-width:768px) {


/* Nav Settings */


.main-nav{
    overflow: hidden;
    display: block;
    position: sticky;
    top: 0;
    width: 100%;
    background-color: rgba(255,255,255,0.4);
}

.main-nav ul{
    padding: 30px 15px;
    margin-bottom: 0;
    
}

.main-nav ul li{
    display:inline-block;
    width: 15%;
    margin: 0 15px;
    background-color: rgb(79,137,164);    
}


/* Section settings */


.content {
    padding-top: 16px;
}


.sticky + .content {
    padding-top: 60px;
}

main section{
    margin-top: 15px;
}

.coaching-aside{
    width: 40%;
}

}

@media screen and (min-width:992px) {


/* Nav Settings */


.main-nav ul li a{
       font-size: 1.1em;
}


#skins-nav{
    position: inherit;
}


/* Section Settings */


#index-section{
    text-align:center;
    padding-bottom: 0;
}

#index-section article{
    display: inline-block;
    margin:0 10px;
    vertical-align: middle;
    width: 45%;

}

#index-section article:first-of-type{
    margin: 0 auto;
    display:block;
    text-align:center;

}

#index-section article p{
    height: 100px;
    padding-bottom: 10px;
}

#lore-main{
    padding-top:60px;
    text-align: center;
}

#lore-section, .lore-aside{
    display: inline-block;
}

#lore-section{
    padding:20px 0;
    width: 45%;
    background-color: rgba(255,255,255,0.2);
    border-radius: 10px;
    margin-bottom: 60px;
}

.lore-aside{
    margin:15px;
    vertical-align: top;
    width: 20%;
    background-color: rgba(255,255,255,0.2);
    border-radius: 10px;
    padding:20px 10px;
}

.lore-aside p{
    text-align: left;
    margin: 15px;
    

}


/* Coaching Settings */


#coaching-main{
    padding:0;
}

#coaching-section, .coaching-aside{
    display: inline-block;
}

#coaching-section{
    width: 60%;
}

.coaching-aside{
    width: 30%;
}

#about-intowski{
    margin-bottom: 40px;
}

.coaching-aside p a{
    text-align: center;
    font-size: 1.1em;
}

.coaching-aside p{
    margin: 15px;
    margin-left: 30px;
}

.coaching-aside a{
    color: #fff;
}

.coaching-aside a:hover{
    text-decoration: underline;
}

.notes{
    display: inline;
    position:fixed;
    width: 150px;
    height: 200px;
    z-index: -1;
    opacity: 0.1;
}

#right-note{
    top:430px;
    right:80px;
}

#left-note{
    top:150px;
    left: 80px;
}


/* Gallery settings */


#mobile-gallery{
    display: none;
}


.gallery-container{
    display:block;
}

.carousel-indicators{
    visibility:hidden;
}

}


@media screen and (min-width:1200px) {


/* Section settings */


#index-section article{
    width: 40%;
    margin: 0 20px;
}

#lore-section{
    width: 50%;
}


/* Gallery Settings */


.gallery-container{
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

.carousel-indicators{
    visibility:visible;
}

.notes{
    width: 200px;
    height: 250px;
}

#right-note{
    top:380px;
    right:60px;
}

#left-note{
    left: 60px;
}

.coaching-aside p{
    font-size: 1.2em;
}

}

@media screen and (min-width:1400px) {


/* Nav Settings */


.main-nav ul li{
        display:inline-block;
        width: 10%;
        margin: 0 15px;
        background-color: rgb(79,137,164);    
}
   

/* Section Settings */


#lore-section{
 width: 55%;   
}

#lore-section figure {
    width: 80%;
    margin: 0 auto;
}

.lore-aside{
    width: 15%;
    margin-left: 40px;
    margin-right: 40px;
}

#right-note{
    right:70px;
}

#left-note{
    left: 70px;
}


/* Coaching Settings */


#coaching-main{
    text-align: center;
}

.coaching-aside{
    width: 20%;
}

#coaching-section{
    width: 40%;
    text-align: left;
}

}

